# celery_practice

./: .gitignore  config.py  dags.py  main.py  pyproject.toml  tasks.py
